--- a/css/style.css
+++ b/css/style.css
@@ -8534,6 +8534,9 @@ textarea.form-control {
   @media (max-width: 767.98px) {
     .block-3 .image {
       height: 300px; } }
+      .block-3 {
+        width: 100%;
+      }
 
 .custom-pagination {
   width: 100%;
