Changes to thumbnails
Changes thumbnails with a border-radius to follow trends

--- a/css/style.css
+++ b/css/style.css
@@ -8528,6 +8528,7 @@ textarea.form-control {
   margin-bottom: 0; }
 
 .block-3 .image {
+  border-radius:20px;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat; }
