Footer and thumbnails

--- a/css/carouselFade.css
+++ b/css/carouselFade.css
@@ -24,6 +24,9 @@
   z-index: 2;
 }
 
+.carousel-caption:hover{
+cursor:pointer;
+}
 
 /********************************/
 /*       Slides backgrounds     */
