--- a/css/footer.css
+++ b/css/footer.css
@@ -11,7 +11,7 @@ section .section-title {
     text-transform: uppercase;
 }
 #footer {
-    background: #80aaff !important;
+    background: #5d7480 !important;
 }
 #footer h5{
 	padding-left: 2px;
